name:            cmdargs-help
version:         0.1
license:         BSD3
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        generate command line arguments from a --help output
description:     generate command line arguments from a --help output

stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/gregwebs/cmdargs-help

library
  build-depends:   base >= 0.4
                 , containers
                 , data-default
                 , attoparsec == 0.10.*
                 , th-lift
                 , text
  exposed-modules: System.Console.ParseHelp
