name:            parse-help
version:         0.0
license:         BSD3
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        generate command line arguments from a --help output
description:     see http://github.com/gregwebs/cmdargs-help

stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/gregwebs/cmdargs-help

library
  build-depends:   base >= 0.4
                 , containers
                 , data-default
                 , attoparsec == 0.10.*
                 , th-lift
                 , text
                 , file-location
                 , template-haskell
  exposed-modules: System.Console.ParseHelp
  ghc-options: -Wall -Werror

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       Help.hs
    hs-source-dirs: ., test
    build-depends: cmdargs
